--- a/Nop.Plugin.Misc.Omnisend/Views/Configure.cshtml
+++ b/Nop.Plugin.Misc.Omnisend/Views/Configure.cshtml
@@ -13,7 +13,7 @@
                         <p>
                             To enable this plugin, you'll need to:<br />
                             <br />
-                            1. Please <a href="https://app.omnisend.com/registrationv2" target="_blank">sign up</a> on omnisend.com <br />
+                            1. Please <a href="https://your.omnisend.com/g1K9y2" target="_blank">sign up</a> on omnisend.com <br />
                             2. Follow steps provided here - <a href='https://app.omnisend.com/apps/connect-store/nopcommerce' target="_blank">instructions</a>.<br />
                             3. Fill in your account details below<br />
                         </p>
