--- a/Nop.Plugin.Misc.Omnisend/Views/Configure.cshtml
+++ b/Nop.Plugin.Misc.Omnisend/Views/Configure.cshtml
@@ -37,9 +37,9 @@
                             </div>
                         </div>*@
                         <div class="form-group row">
-                            <button type="submit" name="save" class="btn btn-primary">
-                                @T("Admin.Common.Save")
-                            </button>
+                            <div class="col-md-9 offset-md-3">
+                                <button type="submit" name="save" class="btn btn-primary">@T("Admin.Common.Save")</button>
+                            </div>
                         </div>
                     </div>
                 </div>
