--- a/Nop.Plugin.Misc.Omnisend/Views/Configure.cshtml
+++ b/Nop.Plugin.Misc.Omnisend/Views/Configure.cshtml
@@ -22,7 +22,7 @@
                                 <nop-label asp-for="ApiKey"/>
                             </div>
                             <div class="col-md-9">
-                                <nop-editor asp-for="ApiKey" asp-required="true" html-attributes="@(new { value = Model.ApiKey })"/>
+                                <nop-editor asp-for="ApiKey" asp-required="true" asp-value="@Model.ApiKey"/>
                                 <span asp-validation-for="ApiKey"></span>
                             </div>
                         </div>
